--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -199,31 +199,34 @@
 /* End Featured Detail Page */
 
 /* Begin Gift Guide Main Page */
-.gift{margin:30px 0 0 0;} 
-.gift .rt_cnt .gift_box{float:left;width:31.33%;height:250px;margin:10px 1%;}
-.gift .rt_cnt .gift_box .inner{background:rgba(255,255,255,0.8);text-align:center;width:70%;margin:70px 15% 0 15%;padding:20px 0;}
-.gift .rt_cnt a .gift_box .inner{text-decoration:none;color:#000;}
-.gift .rt_cnt a .gift_box .inner em{}
-.gift .rt_cnt a .gift_box .inner p{font-size:30px;font-weight:500;border-top:2px solid;border-bottom:2px solid;display:inline-block;line-height:1.3;}
-.gift .rt_cnt a .gift_box .inner p span{display:block;}
-.gift .rt_cnt .card_01{background:url(/assets/gift_img1.jpg) center center no-repeat;background-size:cover;}
-.gift .rt_cnt .card_02{background:url(/assets/gift_img2.jpg) center center no-repeat;background-size:cover;}
-.gift .rt_cnt .card_03{background:url(/assets/gift_img3.jpg) center center no-repeat;background-size:cover;}
+.guide_wrap{margin:30px 0 0 0;} 
+.guide_wrap .guide_box{float:left;width:31.33%;margin:0 1% 70px 1%;}
+.guide_wrap .guide_box .image{height:250px;}
+.guide_wrap .guide_box .image img{width:100%;height:100%;}
+.guide_wrap .guide_box .inner{font-family: 'Montserrat', sans-serif;}
+.guide_wrap .guide_box .inner p{font-size:20px;display:block;line-height:1.2;height:3.6em;overflow:hidden;margin:10px 0 40px 0;}
+.guide_wrap .guide_box .inner p a{text-decoration:none;color:#000;}
+.guide_wrap .guide_box .inner span{margin:5px 0 15px 0;display:block;font-size:13px;color:#616161;border-bottom:1px solid #616161;width:60%;}
+.guide_wrap .guide_box .inner span em{margin-left:10px;}
+.guide_wrap .guide_box .inner .btn{text-decoration:none;background:#000;color:#fff;padding:10px 20px;}
+
 
 @media screen and (max-width:640px){
-  .gift{margin:30px 0 0 0;} 
-  .gift .rt_cnt .gift_box{float:left;width:48%;height:auto;}
-  .gift .rt_cnt .gift_box .inner{margin:20px 15%;}
-  .gift .rt_cnt .gift_box .inner a p{font-size:20px;}
+
 }
 
 @media screen and (min-width:641px) and (max-width:1199px){
-  .gift .lt_cnt{float:left;width:28%;margin:0 2% 30px 0;}
-  .gift .rt_cnt{float:left;width:70%;}
-  .gift .rt_cnt .gift_box{float:left;width:48%;margin:0 1% 20px 0;height:auto;}
-  .gift .rt_cnt .gift_box .inner{margin:20px 15%;}
+  
 }
 /* End Gift Guide Main Page */
+
+
+.gudies_show_wrap{width:1000px;margin:0 auto;}
+.gudies_show_wrap .top_box{margin-top:50px;}
+.gudies_show_wrap .top_box img{float:left;width:31.33%;margin:0 1% 70px 1%;height:300px;object-fit:contain;}
+
+
+
 
 /* Begin Gift Guide Detail Page */
 .giftail{margin-top:40px;}
@@ -232,13 +235,17 @@
 .giftail .card_wrap .card{display:inline-block;margin:0 0 30px 0;}
 .giftail .card_wrap .inner_wrap .inner{border-top:2px solid;border-bottom:2px solid;padding-bottom:20px;text-align:right;width:30%;line-height:1.3;}
 .giftail .card_wrap .inner_wrap .inner strong{font-size:50px;font-weight:600;color:#000;}
-.giftail .card_wrap .card em{border-bottom:1px solid #000;display:block;text-align:right;font-weight:400;color:#000;background:#f4ee42;}
 .giftail .card_wrap .card .mid_image{margin:5px 0 10px 0;}
-.giftail .card_wrap .card .mid_image img{width:100%;-webkit-filter:grayscale(100%);filter:gray;}
-.giftail .card_wrap .card .mid_image img:hover{-webkit-filter:grayscale(0%);filter:none;}
-.giftail .card_wrap .card p{margin-bottom:5px;border-bottom:1px solid #ccc;padding-bottom:5px;}
-.giftail .card_wrap .card p a{text-decoration:none;color:#3d3d3d;}
-.giftail .card_wrap .card span{}
+.giftail .card_wrap .card .mid_image img{width:100%;}
+/*.giftail .card_wrap .card .mid_image img{width:100%;-webkit-filter:grayscale(100%);filter:gray;}
+.giftail .card_wrap .card .mid_image img:hover{-webkit-filter:grayscale(0%);filter:none;}*/
+.giftail .card_wrap .card{font-family: 'Montserrat', sans-serif;}
+/*.giftail .card_wrap .card p{margin-bottom:5px;border-bottom:1px solid #ccc;padding-bottom:5px;}*/
+.giftail .card_wrap .card p a{text-decoration:none;color:#3d3d3d;font-size:25px;line-height:1.2;}
+.giftail .card_wrap .card span{display:block;color:#ccc;}
+.giftail .card_wrap .card .pricing{margin:20px 0;font-size:20px;}
+.giftail .card_wrap .card>.pricing>em{text-decoration:line-through;}
+.giftail .card_wrap .card>.pricing>p{}
 .giftail .card_wrap .card .btn{margin:5px 0;display:inline-block;}
 .giftail .card_wrap .card .btn>em{float:left;font-size:13px;background:#000;color:#fff;padding:3px 20px;border:1px solid #000;line-height:20px;}
 .giftail .card_wrap .card .btn>a{float:left;text-decoration:none;color:#000;font-size:13px;border:1px solid #000;padding:3px 20px;line-height:20px;}
