--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -102,6 +102,113 @@
 </div> 
 -->
 
+<div class="card clearfix" data-score="25" data-price="224.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MHmaIP"><img src="https://images-na.ssl-images-amazon.com/images/I/71sBjbHYbKL._AC_SR300,300_.jpg" alt="Beats Solo3 Wireless On-Ear Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MHmaIP">Beats Solo3 Wireless On-Ear Headphones - Matte Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$224.95</span><span class="ori_price">$299.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MHmaIP">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="15.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KP5igH"><img src="https://images-na.ssl-images-amazon.com/images/I/81Xvacsj2BL._SX522_.jpg" alt="LEGO Star Wars" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KP5igH">LEGO Star Wars: A New Hope Escape Pod vs. Dewback Microfighters 75228 Building Kit, New 2019 (177 Pieces)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$15.99</span><span class="ori_price">$19.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KP5igH">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="11.24">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IL8aZI"><img src="https://images-na.ssl-images-amazon.com/images/I/71SmdTytGkL._SY679_.jpg" alt="Best Naturals Alpha Liopic Acid" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IL8aZI">Best Naturals Alpha Liopic Acid 600 mg 120 Capsules - ALA Alpha Lipoic Acid Powerful Antioxidant </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$11.24</span><span class="ori_price">$14.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IL8aZI">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="17.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31vwqHJ"><img src="https://images-na.ssl-images-amazon.com/images/I/71qIo1jITkL._SX522_.jpg" alt="Best Keto Diet Pills" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31vwqHJ">(2 Pack | 120 Capsules) Best Keto Diet Pills with Carb Blocker, Belly Fat Supplement - Exogenous Ketones - Ketosis for Women Men</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$17.99</span><span class="ori_price">$30.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31vwqHJ">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2x1cRZX"><img src="https://images-na.ssl-images-amazon.com/images/I/61rhj0eFAYL._SX679_.jpg" alt="HeimVision Sunrise Alarm Clock" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2x1cRZX">HeimVision Sunrise Alarm Clock, Smart Wake up Light Sleep Aid Digital Alarm Clock with Sunset Simulation and FM Radio</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$39.99</span><span class="ori_price">$79.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2x1cRZX">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="23.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31spsTM"><img src="https://images-na.ssl-images-amazon.com/images/I/41J+n309bJL._AC_US218_.jpg" alt="Home-Complete Shoe Rack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31spsTM">Home-Complete Shoe Rack with 5 Shelves-Five Tiers for 30 Pairs-For Bedroom, Entryway, Hallway, and Closet- Space Saving Storage and Organization</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$23.99</span><span class="ori_price">$29.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31spsTM">Shop Now at Amazon</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-score="60" data-price="discounted_price">
   <div class="image_box">
