--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -35,6 +35,308 @@
  </div>
 -->
 
+<div class="card clearfix" data-score="72" data-price="11.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KMEtd5"><img src="https://m.media-amazon.com/images/I/71FBwJdSHeL._SR400,400_.jpg" alt="Cable Organizer Bag" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>72% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KMEtd5">Cable Organizer Bag, Iksnail Travel Electronics Accessories Carrying Pouch, Portable Storage Case for USB Cables, Earphone, Charger, Power Bank...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.20</span><span class="ori_price">$39.99</span></address>
+      <p><span>Take <strong>72% off at $39.99</strong> with promo code: <strong>72PTLA68</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 21, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KMEtd5">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="15.75">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MJRRBq"><img src="https://m.media-amazon.com/images/I/61SPD7FdMFL._SR400,400_.jpg" alt="Ainope Car Vacuum Cleaner" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MJRRBq">Ainope Car Vacuum Cleaner, 5000PA High Power Stronger Suction Car Vacuum DC 12V/ 90W Handheld Auto Car Cleaner </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.75</span><span class="ori_price">$34.99</span></address>
+      <p><span>Take <strong>55% off at $34.99</strong> with promo code: <strong>55VLQMLL</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 14, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MJRRBq">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="55.30">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MMBWCj"><img src="https://m.media-amazon.com/images/I/71jjSpaXGpL._SR400,400_.jpg" alt="Inala Luxury Queen-Size Weighted Blanket" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MMBWCj">Inala Luxury Queen-Size Weighted Blanket with Patented Weight Distribution and Soft, Hypoallergenic 100% Cotton Fabric</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$55.30</span><span class="ori_price">$79.00</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>30% off at $79.00</strong> with promo code: <strong>30INALASALE</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 21, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MMBWCj">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="7.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IDhlv3"><img src="https://m.media-amazon.com/images/I/81u6mRlysLL._SR400,400_.jpg" alt="Aussie Mousse" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IDhlv3">Aussie Mousse, with Jojoba & Sea Kelp, Instant Freeze, 24 Hour Hold, 6 fl oz, Triple Pack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.49</span><span class="ori_price">$9.98</span>
+        <div class="tooltip_red">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+           <p>You can get extra discount by applying promotional code to the product that is being discounting.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>25% off at $9.98</strong> with promo code: <strong>25AUAMJREN</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IDhlv3">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="7.72">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WEBNRc"><img src="https://m.media-amazon.com/images/I/81INqvW-FXL._SR400,400_.jpg" alt="Aussie Hair Gel" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WEBNRc">Aussie Hair Gel, with Bamboo & Kakadu Plum, Headstrong Volume, 7 fl oz, Triple Pack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.72</span><span class="ori_price">$10.29</span>
+        <div class="tooltip_red">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+           <p>You can get extra discount by applying promotional code to the product that is being discounting.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>25% off at $10.29</strong> with promo code: <strong>25AUAMJREN</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WEBNRc">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="10.86">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MNLhd9"><img src="https://m.media-amazon.com/images/I/81-kjPzha6L._SR400,400_.jpg" alt="Aussie Hairspray" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MNLhd9">Aussie Hairspray, with Jojoba Oil & Sea Kelp, Sun Touched Shine, 10 fl oz, Triple Pack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.86</span><span class="ori_price">$14.48</span>
+         <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>25% off at $14.48</strong> with promo code: <strong>25AUAMJREN</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MNLhd9">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="8.21">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XIPsrR"><img src="https://m.media-amazon.com/images/I/8147IQbtuZL._SR400,400_.jpg" alt="Decodyne Have a Nice Day Funny Coffee Mug" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XIPsrR">Decodyne Have a Nice Day Funny Coffee Mug, Funny Cup with Middle Finger on the Bottom 14 oz. (Black)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.21</span><span class="ori_price">$10.95</span></address>
+      <p><span>Take <strong>25% off at $10.95</strong> with promo code: <strong>253CN9TN</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 25, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XIPsrR">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="7.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WCfcVd"><img src="https://m.media-amazon.com/images/I/510hCg3XdVL._SR400,400_.jpg" alt="Livho Blue Light Blocking Glasses" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WCfcVd">Livho Blue Light Blocking Glasses Filter Blue Ray Computer Game Glasses for Women Men Square Eyeglasses TR90 Frame</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.99</span><span class="ori_price">$15.98</span></address>
+      <p><span>Take <strong>50% off at $15.98</strong> with promo code: <strong>50LIVHOFPX</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 07, 2019 at 11:00 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WCfcVd">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="18.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KjT1kX"><img src="https://m.media-amazon.com/images/I/71-hGbW+WdL._SR400,400_.jpg" alt="LEDMIRCY LED Rock Lights" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KjT1kX">LEDMIRCY LED Rock Lights White Kit for JEEP Off Road Truck Auto Car Boat ATV SUV Waterproof High Power Underbody Glow Neon Trail Rig Lights</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.50</span><span class="ori_price">$36.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>50% off at $36.99</strong> with promo code: <strong>50DNTABA</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KjT1kX">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="19.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MMozSV"><img src="https://m.media-amazon.com/images/I/61cKTVF6vYL._SR400,400_.jpg" alt="True Wireless Earbuds Bluetooth" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MMozSV">True Wireless Earbuds Bluetooth 5.0 Headset with 18H Playtime and Zero Pressure Wearing, One-Step Pairing with Touch-Control Operation.</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.79</span><span class="ori_price">$32.99</span></address>
+      <p><span>Take <strong>40% off at $32.99</strong> with promo code: <strong>408X3UD2</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 14, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MMozSV">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="12.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KljOgW"><img src="https://m.media-amazon.com/images/I/71x3x6Ar3pL._SR400,400_.jpg" alt="WORKPRO Cordless Rechargeable Power Screwdriver" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KljOgW">WORKPRO Cordless Rechargeable Power Screwdriver Lithium-ion 3.6V with Quick Change Bits</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.49</span><span class="ori_price">$24.99</span></address>
+      <p><span>Take <strong>50% off at $24.99</strong> with promo code: <strong>5041JJDO</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 17, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KljOgW">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IGoCdt"><img src="https://m.media-amazon.com/images/I/61cUV8aAFvL._SR400,400_.jpg" alt="Exfoliating Kit Set" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IGoCdt">Exfoliating Kit Set - Body Brush With Handle, Loofah Sponge, Bath Towel And Pumice Stone For Feet </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$23.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>50% off at $23.99</strong> with promo code: <strong>50C9911X</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 14, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IGoCdt">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="20.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2N0Vcwj"><img src="https://m.media-amazon.com/images/I/51MM3t4J8FL._SR400,400_.jpg" alt="AMZLIFE Wireless Earbuds" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2N0Vcwj">AMZLIFE Wireless Earbuds, Bluetooth Headphones 5.0 True Wireless 3D Stereo Sound, Built-in Mic and Portable Charging Box</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.00</span><span class="ori_price">$49.99</span></address>
+      <p><span>Take <strong>60% off at $49.99</strong> with promo code: <strong>60F3JPSC</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2N0Vcwj">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="20" data-price="31.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2MITtvh"><img src="https://m.media-amazon.com/images/I/71P98oZdbUL._SR400,400_.jpg" alt="BESTEK 500W Power Inverter" /></a>
