--- a/app/views/guides/gift_guide_01.html.erb
+++ b/app/views/guides/gift_guide_01.html.erb
@@ -21,31 +21,35 @@
         </div>
 
         <div class="card">
-          <em>1914 translation by H. Rackham</em>
           <div class="mid_image">
-            <a href="#n"><img src="https://images.unsplash.com/photo-1541582429172-8b2dea5bc731?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" /></a>
+            <a href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/616sJVZ0ixL._SX679_.jpg" alt="" /></a>
           </div>
-          <p><a href="#n">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</a></p>
+          <p><a href="#n">But I must explain to you how all this mistaken idea of denouncing pleasure</a></p>
+          <span>BY SOMETHING</span>
+
+          <div class="pricing">
+            <em>$100.00</em>
+            <p>$70.00 (30% OFF)</p>
+          </div>
+
+          <div class="btn clearfix">
+            <em>Amazon</em><a href="#n">Buy Now</a>
+          </div>
+        </div>
+        
+        <div class="card">
+          <div class="mid_image">
+            <img src="https://www.skyfloatx.com/uploads/1/2/4/6/124665177/2_2_orig.jpg" alt="" />
+          </div>
+          <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
           <div class="btn clearfix">
             <em>$100.00</em><a href="#n">Buy Now</a>
           </div>
         </div>
         
         <div class="card">
-          <em>1914 translation by H. Rackham</em>
           <div class="mid_image">
-            <img src="https://images.unsplash.com/photo-1485849708108-3bb5576aca9f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" />
-          </div>
-          <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
-          <div class="btn clearfix">
-            <em>$100.00</em><a href="#n">Buy Now</a>
-          </div>
-        </div>
-        
-        <div class="card">
-          <em>1914 translation by H. Rackham</em>
-          <div class="mid_image">
-            <img src="https://images.unsplash.com/photo-1517524285303-d6fc683dddf8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" />
+            <img src="https://images-na.ssl-images-amazon.com/images/I/71ld5uSFhQL._SX522_.jpg" alt="" />
           </div>
           <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
           <div class="btn clearfix">
@@ -53,9 +57,8 @@
           </div>
         </div>
         <div class="card">
-          <em>1914 translation by H. Rackham</em>
           <div class="mid_image">
-            <img src="https://images.unsplash.com/photo-1498182462175-4aaddb8e7f80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" />
+            <img src="https://images-na.ssl-images-amazon.com/images/I/A185AKfrliL._SX522_.jpg" alt="" />
           </div>
           <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
           <div class="btn clearfix">
@@ -63,9 +66,8 @@
           </div>
         </div>
         <div class="card">
-          <em>1914 translation by H. Rackham</em>
           <div class="mid_image">
-            <img src="https://images.unsplash.com/photo-1517856713891-215e57a13c0d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" />
+            <img src="https://grovemade.imgix.net/https%3A%2F%2Fsiteleaf.grovemade.com%2Fuploads%2Fapple-watch-charger-natural-cork-galB-C2.jpg?auto=format&ixlib=python-1.1.2&w=500&s=3a6079950d549e9ce3f4a345763db526" alt="" />
           </div>
           <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
           <div class="btn clearfix">
@@ -75,9 +77,8 @@
       
         
         <div class="card">
-          <em>1914 translation by H. Rackham</em>
           <div class="mid_image">
-            <img src="https://images.unsplash.com/photo-1436262513933-a0b06755c784?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" />
+            <img src="https://images-na.ssl-images-amazon.com/images/I/91X5-twUCEL._SX522_.jpg" alt="" />
           </div>
           <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
           <div class="btn clearfix">
@@ -85,9 +86,8 @@
           </div>
         </div>
         <div class="card">
-          <em>1914 translation by H. Rackham</em>
           <div class="mid_image">
-            <img src="https://images.unsplash.com/photo-1498354136128-58f790194fa7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" />
+            <img src="https://images-na.ssl-images-amazon.com/images/I/61VYkz33WNL._SX522_.jpg" alt="" />
           </div>
           <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
           <div class="btn clearfix">
