--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -12,67 +12,76 @@
         </ul>
       </div>
 
-      <div class="gift common_layout clearfix">
-
-        <div class="lt_cnt">
-          <h2>Gift Guide</h2>
-          <div class="note">
-    		  	<ul>
-    		  	  <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</li>
-    		  	</ul>
-    			</div>
+      <div class="guide_wrap">
+        <div class="guide_box">
+          <div class="image">
+            <a href="/guides/gift_guide_02"><img src="https://grovemade.imgix.net/https%3A%2F%2Fsiteleaf.grovemade.com%2Fuploads%2Fapple-watch-charger-natural-cork-galB-C2.jpg?auto=format&ixlib=python-1.1.2&w=500&s=3a6079950d549e9ce3f4a345763db526"></a>
+          </div>
+          <div class="inner">
+            <span>By Oh,igottabuythis,<em>Jun. 16. 2019</em></span>
+            <p><a href="/guides/gift_guide_02">Lotsen Multi-Room Wireless and Bluetooth Connected Speaker</a></p>
+            <a class="btn" href="/guides/gift_guide_02">READ MORE</a>
+          </div>
         </div>
-        
-        <div class="rt_cnt">
-          <h2>We Love</h2>
-          
-          <a href="/gift_guide/gift_guide_01">
-            <div class="gift_box card_01">
-              <div class="inner">
-                <p>FOR <span>HIM</span></p>
-              </div>
-            </div>
-          </a>
-          
-         <a href="/gift_guide/gift_guide_01">
-            <div class="gift_box card_02">
-              <div class="inner">
-                <p>FOR <span>HER</span></p>
-              </div>
-            </div>
-          </a>
-          
-          <a href="/gift_guide/gift_guide_01">
-            <div class="gift_box card_03">
-              <div class="inner">
-                <p>FOR <span>KIDS</span></p>
-              </div>
-            </div>
-          </a>
-          
-          <a href="/gift_guide/gift_guide_01">
-            <div class="gift_box card_01">
-              <div class="inner">
-                <p>FOR <span>HIM</span></p>
-              </div>
-            </div>
-          </a>
-          
-          <a href="/gift_guide/gift_guide_01">
-            <div class="gift_box card_02">
-              <div class="inner">
-                <p>FOR <span>HER</span></p>
-              </div>
-            </div>
-          </a>
-          
-          <a href="/gift_guide/gift_guide_01">
-            <div class="gift_box card_03">
-              <div class="inner">
-                <p>FOR <span>KIDS</span></p>
-              </div>
-            </div>
-          </a>
+
+        <div class="guide_box">
+          <div class="image">
+            <img src="https://grovemade.imgix.net/https%3A%2F%2Fsiteleaf.grovemade.com%2Fuploads%2Fapple-watch-charger-natural-cork-galB-C2.jpg?auto=format&ixlib=python-1.1.2&w=500&s=3a6079950d549e9ce3f4a345763db526">
+          </div>
+          <div class="inner">
+            <span>By Oh,igottabuythis,<em>Jun. 16. 2019</em></span>
+            <p>Lotsen Multi-Room Wireless a
+            nd Bluetooth Connected Speaker Lotsen Multi-Room Wireless and Bluetooth Connected Speaker</p>
+            <a class="btn" href="#n">READ MORE</a>
+          </div>
+        </div>
+
+        <div class="guide_box">
+          <div class="image">
+            <img src="https://grovemade.imgix.net/https%3A%2F%2Fsiteleaf.grovemade.com%2Fuploads%2Fapple-watch-charger-natural-cork-galB-C2.jpg?auto=format&ixlib=python-1.1.2&w=500&s=3a6079950d549e9ce3f4a345763db526">
+          </div>
+          <div class="inner">
+            <span>By Oh,igottabuythis,<em>Jun. 16. 2019</em></span>
+            <p>Lotsen Multi-Room Wireless and Bluetooth Connected Speaker</p>
+            <a class="btn" href="#n">READ MORE</a>
+          </div>
+        </div>
+
+        <div class="guide_box">
+          <div class="image">
+            <img src="https://grovemade.imgix.net/https%3A%2F%2Fsiteleaf.grovemade.com%2Fuploads%2Fapple-watch-charger-natural-cork-galB-C2.jpg?auto=format&ixlib=python-1.1.2&w=500&s=3a6079950d549e9ce3f4a345763db526">
+          </div>
+          <div class="inner">
+            <span>By Oh,igottabuythis,<em>Jun. 16. 2019</em></span>
+            <p>Lotsen Multi-Room Wireless and Bluetooth Connected Speaker</p>
+            <a class="btn" href="#n">READ MORE</a>
+          </div>
+        </div>
+
+        <div class="guide_box">
+          <div class="image">
+            <img src="https://grovemade.imgix.net/https%3A%2F%2Fsiteleaf.grovemade.com%2Fuploads%2Fapple-watch-charger-natural-cork-galB-C2.jpg?auto=format&ixlib=python-1.1.2&w=500&s=3a6079950d549e9ce3f4a345763db526">
+          </div>
+          <div class="inner">
+            <span>By Oh,igottabuythis,<em>Jun. 16. 2019</em></span>
+            <p>Lotsen Multi-Room Wireless and Bluetooth Connected Speaker</p>
+            <a class="btn" href="#n">READ MORE</a>
+          </div>
+        </div>
+
+        <div class="guide_box">
+          <div class="image">
+            <img src="https://grovemade.imgix.net/https%3A%2F%2Fsiteleaf.grovemade.com%2Fuploads%2Fapple-watch-charger-natural-cork-galB-C2.jpg?auto=format&ixlib=python-1.1.2&w=500&s=3a6079950d549e9ce3f4a345763db526">
+          </div>
+          <div class="inner">
+            <span>By Oh,igottabuythis,<em>Jun. 16. 2019</em></span>
+            <p>Lotsen Multi-Room Wireless and Bluetooth Connected Speaker</p>
+            <a class="btn" href="#n">READ MORE</a>
+          </div>
+        </div>
+      </div>
+
+       
           
         </div>
       </div>
