--- a/app/views/guides/gift_guide_01.html.erb
+++ b/app/views/guides/gift_guide_01.html.erb
@@ -16,7 +16,7 @@
       <div class="card_wrap">
         <div class="inner_wrap">
           <div class="inner">
-            <strong>FOR HIM</strong>
+            <strong>38 Father's Day Gift Ideas for the Coolest Dad Around</strong>
           </div>
         </div>
 
