--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -15,12 +15,12 @@
       <div class="guide_wrap">
         <div class="guide_box">
           <div class="image">
-            <a href="/guides/gift_guide_02"><img src="https://grovemade.imgix.net/https%3A%2F%2Fsiteleaf.grovemade.com%2Fuploads%2Fapple-watch-charger-natural-cork-galB-C2.jpg?auto=format&ixlib=python-1.1.2&w=500&s=3a6079950d549e9ce3f4a345763db526"></a>
+            <a href="/guides/gift_guide_01"><img src="https://grovemade.imgix.net/https%3A%2F%2Fsiteleaf.grovemade.com%2Fuploads%2Fapple-watch-charger-natural-cork-galB-C2.jpg?auto=format&ixlib=python-1.1.2&w=500&s=3a6079950d549e9ce3f4a345763db526"></a>
           </div>
           <div class="inner">
             <span>By Oh,igottabuythis,<em>Jun. 16. 2019</em></span>
-            <p><a href="/guides/gift_guide_02">Lotsen Multi-Room Wireless and Bluetooth Connected Speaker</a></p>
-            <a class="btn" href="/guides/gift_guide_02">READ MORE</a>
+            <p><a href="/guides/gift_guide_01">38 Father's Day Gift Ideas for the Coolest Dad Around</a></p>
+            <a class="btn" href="/guides/gift_guide_01">READ MORE</a>
           </div>
         </div>
 
@@ -81,9 +81,5 @@
         </div>
       </div>
 
-       
-          
-        </div>
-      </div>
     </div><!--./wrap-->
   </div><!--./layout-->
